--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,14 +1,15 @@
 .page{
   height:100vh;
   display:flex;
-  flex-direction: column;
   
+  flex-direction: column;
   align-items: center;
+  justify-content:center;
   background-image: url("/images/logo_ghibli.png");
-  background-color: #cccccc;
   background-repeat	: no-repeat;
-  background-attachment: scroll;
-  background-position: bottom;
+  background-attachment: fixed;
+  background-position: right bottom;
+  background-size:20rem;
 }
 
 
@@ -16,20 +17,27 @@
   font-size:3rem;
   color: black;
   font-weight: 200;
+  margin:2rem 0 0 0;
+}
+
+.flexCenter{
+  display:flex;
+  justify-content: center;
 }
 
 .divRand{
-
+  margin-top:7rem;
   height:5rem;
   width:10rem;
   background-color:red;
   display:flex;
   align-items:center;
   justify-content: center;
+  border-radius: 10%;
   
 }
-
 .text-rand{
+  text-align:center;
   height:3rem;
   width:5rem;
   background:none;
