--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;700;800;900&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
+  width:100%;
+  height:100%;
 
 }
 
