--- a/src/styles/Film.module.css
+++ b/src/styles/Film.module.css
@@ -1,39 +1,78 @@
 .container{
-    margin:0;
-    width:95vw;
-    height:100%;
+    display:grid;
+    grid-template-columns: 1fr 1.5fr;
+    grid-template-rows:100%;
+    height:80vh;
+    
+  
 }
 
 .image{
-
-    width:100%;
-    height:90%;
-
     padding:0;
     margin:0;
-    margin-top:5%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height:80%;
 
-    position:absolute;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-
-    opacity: 40%;
-    z-index:-1;
 }
 
-.title{
-    height:4rem;
-    font-weight: 700;
-    font-size: 4rem;
-    text-align:center;
+.image img{
+    box-shadow:7px 10px 20px 8px var(--primary-color);
+    border-radius:10px;
+    display:block;
+    max-width: 80%;
+    height:80%;
+}
+
+.texts{
+    margin:0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
 }
 
-.description{
-    font-weight: 600;
+.title{
+    color:var(--second-color);
+    font-weight: 700;
+    font-size: 2.6rem;
     text-align:center;
-    height:10rem;
-    margin: 0 15rem;
+    margin-bottom:0.5rem;
+    margin-top:2rem;
+    max-width: 80%;
+
+
+}
+
+.description{
+    max-width: 80%;
+
+    color:black;
+    font-weight: 500;
+    text-align:left;
+    line-height: 1.8rem;
+    font-size:1rem;
+    box-shadow:2px 2px 10px 2px var(--primary-color);
+
+    border-radius:10px;
+
+    padding:0.8rem;
+}
+
+@media (min-width:1367px){
+    
+    .title{
+        margin-bottom:3rem;
+    }
+    .image{
+        margin-top:5.6rem;
+    }
+    
+    .description{
+        font-family: Montserrat;
+        font-weight: 400;
+        font-size:1.4rem;
+        line-height: 2rem;
+    }
 }
