--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,44 +1,29 @@
 .page{
-  height:100vh;
-  display:flex;
   
-  flex-direction: column;
-  align-items: center;
-  justify-content:center;
-  background-image: url("/images/logo_ghibli.png");
-  background-repeat	: no-repeat;
-  background-attachment: fixed;
-  background-position: right bottom;
-  background-size:20rem;
-}
-
-
-.title{
-  font-size:3rem;
-  color: black;
-  font-weight: 200;
-  margin:2rem 0 0 0;
-}
-
-.flexCenter{
-  display:flex;
-  justify-content: center;
 }
 
 .divRand{
-  margin-top:7rem;
-  height:5rem;
-  width:10rem;
-  background-color:red;
+  position:relative;
+  top:-3rem;
+  left:-5rem;
+  background-color:var(--accent);
+  
+  width: 8rem;
+  height:4rem;
+
   display:flex;
   align-items:center;
   justify-content: center;
   border-radius: 10%;
-  
+
+  margin-left:auto;
+  margin-right:20%;
+
+  cursor:pointer;
+
 }
-.text-rand{
+.textRand{
   text-align:center;
-  height:3rem;
-  width:5rem;
-  background:none;
+  color:WHITE;
+  font-weight: 700;
 }
