--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;700;800;900&display=swap');
 
+:root{
+  --background:#f5f5f5;
+  --primary-color:#25274d;
+  --second-color:#0B486B;
+  --accent:#E85A4F;
+}
+
+
 html,
 body {
+  background-color:var(--background);
   padding: 0;
   margin: 0;
   width:100%;
