--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,9 @@
 
 :root{
   --background:#f5f5f5;
-  --primary-color:#25274d;
-  --second-color:#0B486B;
-  --accent:#E85A4F;
+  --primary-color:#7B7485;
+  --second-color:#040078;
+  --accent:#A20003;
 }
 
 
