--- a/src/styles/Film.module.css
+++ b/src/styles/Film.module.css
@@ -3,8 +3,6 @@
     grid-template-columns: 1fr 1.5fr;
     grid-template-rows:100%;
     height:80vh;
-    
-  
 }
 
 .image{
@@ -21,7 +19,7 @@
     box-shadow:7px 10px 20px 8px var(--primary-color);
     border-radius:10px;
     display:block;
-    max-width: 80%;
+    max-width: 100%;
     height:80%;
 }
 
@@ -36,13 +34,11 @@
 .title{
     color:var(--second-color);
     font-weight: 700;
-    font-size: 2.6rem;
+    font-size: 2rem;
     text-align:center;
     margin-bottom:0.5rem;
-    margin-top:2rem;
+    margin-top:1rem;
     max-width: 80%;
-
-
 }
 
 .description{
@@ -52,7 +48,7 @@
     font-weight: 500;
     text-align:left;
     line-height: 1.8rem;
-    font-size:1rem;
+    font-size:0.8rem;
     box-shadow:2px 2px 10px 2px var(--primary-color);
 
     border-radius:10px;
@@ -64,6 +60,7 @@
     
     .title{
         margin-bottom:3rem;
+        font-size:2.6rem;
     }
     .image{
         margin-top:5.6rem;
@@ -74,5 +71,12 @@
         font-weight: 400;
         font-size:1.4rem;
         line-height: 2rem;
+    }
+}
+
+@media (max-width:768px){
+    .container{
+        display:flex;
+        flex-direction: column;
     }
 }
