--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,11 +1,64 @@
-.page{
-  
+.container{
+  display:grid;
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-rows:80% 20%;
+  grid-template-rows:90%;
+  height:80vh;
+}
+
+.image{
+  padding:0;
+  margin:0;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height:80%;
+
+}
+
+.image img{
+  box-shadow:7px 10px 20px 8px var(--primary-color);
+  border-radius:10px;
+  display:block;
+  max-width: 100%;
+  height:80%;
+}
+
+.texts{
+  grid-row: span 2;
+  margin:0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title{
+  color:var(--second-color);
+  font-weight: 700;
+  font-size: 2rem;
+  text-align:center;
+  margin-bottom:0.5rem;
+  margin-top:1rem;
+  max-width: 80%;
+}
+
+.description{
+  max-width: 80%;
+
+  color:black;
+  font-weight: 500;
+  text-align:left;
+  line-height: 1.8rem;
+  font-size:0.8rem;
+  box-shadow:2px 2px 10px 2px var(--primary-color);
+
+  border-radius:10px;
+
+  padding:0.8rem;
 }
 
 .divRand{
-  position:relative;
-  top:-3rem;
-  left:-5rem;
+
   background-color:var(--accent);
   
   width: 8rem;
@@ -14,10 +67,9 @@
   display:flex;
   align-items:center;
   justify-content: center;
-  border-radius: 10%;
+  border-radius: 10px;
 
-  margin-left:auto;
-  margin-right:20%;
+  margin:0rem auto 3rem auto;
 
   cursor:pointer;
 
@@ -27,3 +79,34 @@
   color:WHITE;
   font-weight: 700;
 }
+
+@media (min-width:1367px){
+  
+  .title{
+      margin-top:5rem;
+      margin-bottom:3rem;
+      font-size:2.6rem;
+  }
+  .image{
+      margin-top:5.6rem;
+  }
+  
+  .description{
+      font-family: Montserrat;
+      font-weight: 400;
+      font-size:1.4rem;
+      line-height: 2rem;
+  }
+}
+
+@media (max-width:768px){
+  .container{
+      display:flex;
+      flex-direction: column;
+  }
+  .divRand{
+    margin:3rem auto 3rem auto;
+  }
+}
+
+
