--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -16,6 +16,22 @@
 
 }
 
+.logo{
+  padding:0;
+  margin:0;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height:80%;
+}
+
+.logo img{
+  border-radius:10px;
+  display:block;
+  max-width: 100%;
+  height:80%;
+}
+
 .image img{
   box-shadow:7px 10px 20px 8px var(--primary-color);
   border-radius:10px;
@@ -50,11 +66,20 @@
   text-align:left;
   line-height: 1.8rem;
   font-size:0.8rem;
-  box-shadow:2px 2px 10px 2px var(--primary-color);
 
   border-radius:10px;
 
   padding:0.8rem;
+}
+
+.invite{
+  font-weight: 700;
+  color:var(--accent);
+}
+.click{
+  font-weight: 700;
+
+  color: var(--accent);
 }
 
 .divRand{
