--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -13,7 +13,6 @@
   justify-content: center;
   align-items: center;
   height:80%;
-
 }
 
 .logo{
@@ -70,6 +69,8 @@
   border-radius:10px;
 
   padding:0.8rem;
+
+  
 }
 
 .invite{
@@ -126,6 +127,7 @@
 
 @media (max-width:768px){
   .container{
+      margin-top:2rem;
       display:flex;
       flex-direction: column;
   }
