--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,3 +1,7 @@
+.page{
+  height:100vh;
+}
+
 .container{
   display:grid;
   grid-template-columns: 1fr 1.5fr;
@@ -32,7 +36,7 @@
 }
 
 .image img{
-  box-shadow:7px 10px 20px 8px var(--primary-color);
+  box-shadow:7px 10px 20px 8px var(--second-color);
   border-radius:10px;
   display:block;
   max-width: 80%;
@@ -45,21 +49,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 .title{
-  color:var(--second-color);
+  color:var(--primary-color);
   font-weight: 700;
   font-size: 2rem;
   text-align:center;
   margin-bottom:0.5rem;
-  margin-top:1rem;
+  margin-top:2rem;
   max-width: 80%;
 }
 
 .description{
   max-width: 80%;
-
   color:black;
   font-weight: 500;
   text-align:left;
@@ -74,18 +78,20 @@
 }
 
 .invite{
+  text-align:left;
   font-weight: 700;
-  color:var(--accent);
+  color:var(--accent-text);
 }
-.click{
-  font-weight: 700;
 
-  color: var(--accent);
+.click{
+  
+  font-weight: 700;
+  color: var(--accent-text);
 }
 
 .divRand{
 
-  background-color:var(--accent);
+  background-color:var(--accent-button);
   
   width: 8rem;
   height:4rem;
@@ -130,6 +136,7 @@
       margin-top:2rem;
       display:flex;
       flex-direction: column;
+
   }
   .divRand{
     margin:3rem auto 3rem auto;
