--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,8 +1,31 @@
+
+
 .page{
   height:100vh;
 }
 
 .container{
+  display:grid;
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-rows:80% 20%;
+  grid-template-rows:90%;
+  height:80vh;
+  animation: fadeInFromNone 0.8s ease-in;
+}
+
+@keyframes fadeInFromNone {
+  0% {
+      display: none;
+      opacity: 0;
+  }
+  
+  100% {
+      display: block;
+      opacity: 1;
+  }
+}
+
+.containerDefault{
   display:grid;
   grid-template-columns: 1fr 1.5fr;
   grid-template-rows:80% 20%;
@@ -136,10 +159,16 @@
       margin-top:2rem;
       display:flex;
       flex-direction: column;
-
   }
   .divRand{
     margin:3rem auto 3rem auto;
+  }
+  
+}
+
+@media (max-width:680px){
+  .page{
+    min-height:700px;
   }
 }
 
